Add sync-profile  button, auto donwload buil-in mutiple profile